@@ -26,22 +26,22 @@
 // In the case that are compiling on linux, we need to define _GNU_SOURCE
 // *before* randombytes.h is included. Otherwise SYS_getrandom will not be
 // declared.
-#if defined(__linux__)
+#if defined(__linux__) || defined(__GNU__)
 # define _GNU_SOURCE
-#endif /* defined(__linux__) */
+#endif /* defined(__linux__) || defined(__GNU__) */
 
 #include "randombytes.h"
 
-// RANDOMBYTES_INFO added by Bartek Fabiszewski to easily turn off pragma messages
+// RANDOMBYTES_INFO to easily turn off pragma messages
 #ifdef RANDOMBYTES_DEBUG
-# if defined( __clang__ ) || defined( __GNUC__ )
-#  define PRAGMA( x ) _Pragma( #x )
-# elif defined( _MSC_VER )
-#  define PRAGMA( x ) __pragma( x )
+# if defined(__clang__) || defined(__GNUC__)
+#  define PRAGMA(x) _Pragma(#x)
+# elif defined(_MSC_VER)
+#  define PRAGMA(x) __pragma(x)
 # endif
-# define RANDOMBYTES_INFO( msg ) PRAGMA( message( msg ) )
+# define RANDOMBYTES_INFO(msg) PRAGMA(message(msg))
 #else
-# define RANDOMBYTES_INFO( msg )
+# define RANDOMBYTES_INFO(msg)
 #endif
 
 #if defined(_WIN32)
@@ -55,7 +55,12 @@
 #include <stdlib.h>
 #endif
 
-#if defined(__linux__)
+/* kFreeBSD */
+#if defined(__FreeBSD_kernel__) && defined(__GLIBC__)
+# define GNU_KFREEBSD
+#endif
+
+#if defined(__linux__) || defined(__GNU__) || defined(GNU_KFREEBSD)
 /* Linux */
 // We would need to include <linux/random.h>, but not every target has access
 // to the linux headers. We only need RNDGETENTCNT, so we instead inline it.
@@ -70,10 +75,10 @@
 # include <stdint.h>
 # include <stdio.h>
 # include <sys/ioctl.h>
-# if defined(__linux__) && defined(__GLIBC__) && ((__GLIBC__ > 2) || (__GLIBC_MINOR__ > 24))
+# if (defined(__linux__) || defined(__GNU__)) && defined(__GLIBC__) && ((__GLIBC__ > 2) || (__GLIBC_MINOR__ > 24))
 #  define USE_GLIBC
 #  include <sys/random.h>
-# endif /* defined(__linux__) && defined(__GLIBC__) && ((__GLIBC__ > 2) || (__GLIBC_MINOR__ > 24)) */
+# endif /* (defined(__linux__) || defined(__GNU__)) && defined(__GLIBC__) && ((__GLIBC__ > 2) || (__GLIBC_MINOR__ > 24)) */
 # include <sys/stat.h>
 # include <sys/syscall.h>
 # include <sys/types.h>
@@ -84,7 +89,7 @@
 #  define SSIZE_MAX (SIZE_MAX / 2 - 1)
 # endif /* defined(SSIZE_MAX) */
 
-#endif /* defined(__linux__) */
+#endif /* defined(__linux__) || defined(__GNU__) || defined(GNU_KFREEBSD) */
 
 
 #if defined(__unix__) || (defined(__APPLE__) && defined(__MACH__))
@@ -92,6 +97,10 @@
 # include <sys/param.h>
 # if defined(BSD)
 #  include <stdlib.h>
+# endif
+/* GNU/Hurd defines BSD in sys/param.h which causes problems later */
+# if defined(__GNU__)
+#  undef BSD
 # endif
 #endif
 
@@ -130,7 +139,7 @@ static int randombytes_wasi_randombytes(void *buf, size_t n) {
 }
 #endif /* defined(__wasi__) */
 
-#if defined(__linux__) && (defined(USE_GLIBC) || defined(SYS_getrandom))
+#if (defined(__linux__) || defined(__GNU__)) && (defined(USE_GLIBC) || defined(SYS_getrandom))
 # if defined(USE_GLIBC)
 // getrandom is declared in glibc.
 # elif defined(SYS_getrandom)
@@ -160,10 +169,12 @@ static int randombytes_linux_randombytes_getrandom(void *buf, size_t n)
     assert(n == 0);
     return 0;
 }
-#endif // defined(__linux__) && (defined(USE_GLIBC) || defined(SYS_getrandom))
+#endif /* (defined(__linux__) || defined(__GNU__)) && (defined(USE_GLIBC) || defined(SYS_getrandom)) */
 
 
-#if defined(__linux__) && !defined(SYS_getrandom)
+#if (defined(__linux__) || defined(GNU_KFREEBSD)) && !defined(SYS_getrandom)
+
+# if defined(__linux__)
 static int randombytes_linux_read_entropy_ioctl(int device, int *entropy)
 {
     return ioctl(device, RNDGETENTCNT, entropy);
@@ -211,6 +222,9 @@ static int randombytes_linux_wait_for_entropy(int device)
         strategy = PROC;
         // Open the entropy count file
         proc_file = fopen("/proc/sys/kernel/random/entropy_avail", "r");
+        if (proc_file == NULL) {
+            return -1;
+        }
     } else if (retcode != 0) {
         // Unrecoverable ioctl error
         return -1;
@@ -269,7 +283,7 @@ static int randombytes_linux_wait_for_entropy(int device)
     }
     return retcode;
 }
-
+# endif /* defined(__linux__) */
 
 static int randombytes_linux_randombytes_urandom(void *buf, size_t n)
 {
@@ -280,8 +294,9 @@ static int randombytes_linux_randombytes_urandom(void *buf, size_t n)
         fd = open("/dev/urandom", O_RDONLY);
     } while (fd == -1 && errno == EINTR);
     if (fd == -1) return -1;
+# if defined(__linux__)
     if (randombytes_linux_wait_for_entropy(fd) == -1) return -1;
-    
+# endif
     while (n > 0) {
         count = n <= SSIZE_MAX ? n : SSIZE_MAX;
         tmp = read(fd, (char *)buf + offset, count);
@@ -344,7 +359,7 @@ int randombytes(void *buf, size_t n)
 #if defined(__EMSCRIPTEN__)
 RANDOMBYTES_INFO("Using crypto api from NodeJS")
     return randombytes_js_randombytes_nodejs(buf, n);
-#elif defined(__linux__)
+#elif defined(__linux__) || defined(__GNU__) || defined(GNU_KFREEBSD)
 # if defined(USE_GLIBC)
 RANDOMBYTES_INFO("Using getrandom function call")
     /* Use getrandom system call */
